# sorting-visualizer

./: .gitignore  README.md  build-wsl.sh  index.html  package-lock.json  package.json
src/: controller.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/sorting/: algorithms.ts  visualizer.ts
