[package]
name = "sorting-visualizer"
version = "0.1.0"
description = "Sorting Algorithm Visualizer"
authors = ["you"]
edition = "2021"

[lib]
name = "sorting_visualizer_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
